--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"); 
 
 :root { 
-  --cor-destaque: #f7b4c9; 
+  --cor-destaque: #d28fa5; 
   --cor-gradiente-preto: linear-gradient( 
     113deg, 
     #8b335f 0%, 
